added flat-ui, simplified some models student now able to get notified when assessment started.

--- a/app/views/partials/navbar.html
+++ b/app/views/partials/navbar.html
@@ -6,7 +6,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/" style="padding: 0;"><img src="images/inGauge_Logo.png" alt="inGauge Logo" style="height: 40px;" title="inGauge"></a>
+        <a class="navbar-brand" href="/" style="padding: 3px; font-size: 42px; color:#16a085; font: Lato">ingauge</a>
     </div>
     <div class="collapse navbar-collapse" id="teacher-navbar-collapse">
         <ul class="nav navbar-nav navbar-right">
