--- a/app/views/partials/teacher/assessmentResults.html
+++ b/app/views/partials/teacher/assessmentResults.html
@@ -16,7 +16,7 @@
 </div>
         
 <div style="margin: 20px 0;" class="form-group btn-group pull-right">
-    <a ng-href="{{getBackUrl()}}" class="btn btn-sm btn-default">Return</a>
+    <button ng-click="endAssessment()" class="btn btn-sm btn-default">Return</button>
     <div style="clear: both"></div>
 </div>
 <div style="clear:both;"></div>
