--- a/app/views/index.html
+++ b/app/views/index.html
@@ -19,7 +19,7 @@
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/external/bootstrap.min.custom.css">
+    <link rel="stylesheet" href="styles/external/flat-ui.css">
     <!-- endbuild -->
 
   </head>
@@ -28,7 +28,7 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- Add your site or application content here -->
-    <div class="container" ng-view=""></div>
+    <div class="container main-page" ng-view=""></div>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -69,6 +69,7 @@
         <script src="scripts/controllers/teacher/assessments.js"></script>
         <script src="scripts/controllers/teacher/assessmentDetail.js"></script>
         <script src="scripts/controllers/teacher/assessmentResults.js"></script>
+        <script src="scripts/controllers/student/assessment.js"></script>
         <script src="scripts/controllers/student/session.js"></script>
         <script src="scripts/controllers/student/login.js"></script>
         <script src="scripts/controllers/reports/index.js"></script>
