--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,6 +58,7 @@
     <!-- endbuild -->
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/identity.js"></script>
         <script src="scripts/controllers/navbar.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/loginHeader.js"></script>
