--- a/app/views/partials/student/session.html
+++ b/app/views/partials/student/session.html
@@ -6,7 +6,7 @@
         <button style="height: 170px;" class="btn btn-lg btn-success btn-block" ng-disabled="disableClick" ng-click="sendAction(1)">I Got it</button>
         <div style="font-size: 12px;padding: 3px; text-align: center;" class="form-group">
             <span for="student-name">Student:</span>
-            <span id="student-name">{{student.name}}</span>&nbsp;|
+            <span id="student-name">{{student}}</span>&nbsp;|
             <span for="session-name">Session:</span>
             <span id="session-name">{{session.title}}</span>
         </div>
