--- a/app/views/partials/student/assessment.html
+++ b/app/views/partials/student/assessment.html
@@ -1,12 +1,15 @@
 <div class="form-group">
-    <div  class="form-group" class="col-md-10">
-        <h2>Question:</h2>
-        <h3>{{ currentQuestion.text }}</h3>
+    <div ng-hide="noMoreQuestions" class="form-group" class="col-md-10">
+        <h5>Question:</h5>
+        <h4>{{ currentQuestion.text }}</h4>
         <table class="table table-striped table-hover table-bordered table-responsive">
-            <tr ng-class="answer === selectedAnswer" ng-repeat="answer in currentQuestion.answers" ng-click="assessmentAnswerSelect(answer)">
-                <td>{{ answer.text }}</td>
+            <tr style="cursor: pointer;" ng-repeat="a in currentQuestion.answers" ng-click="selectAnswer(a)">
+                <td ng-class="{selected: isSelected(a)}">{{ a.text }}</td>
             </tr>
         </table>
-        <td style="padding: 3px;"><button class="btn btn btn-info" ng-click="submitAnswer(answer)">Submit</button></td>
     </div>
+    <div ng-show="noMoreQuestions">
+        <h4>Done!</h4>
+    </div>
+    <button class="btn btn btn-info pull-right" ng-click="submitAnswer()">{{buttonText()}}</button>
 </div>
