--- a/app/views/partials/teacher/assessmentResults.html
+++ b/app/views/partials/teacher/assessmentResults.html
@@ -1,18 +1,13 @@
 <div ng-include="'partials/navbar'"></div>
 
-<div ng-show="assessmentResults">
-   <!-- <table class="table table-striped table-hover table-bordered table-responsive">-->
-    <!--TODO: MAke this pretty!!!-->
-        {{assessmentResults}}
-        <!--<tr ng-repeat="answer in assessmentResults.question.answers" ng-class="{correct: answer.correct}">
+<div ng-repeat="question in assessmentResults">
+   <h5>{{question._questionText}}</h5>
+   <table class="table table-striped table-hover table-bordered table-responsive">
+        <tr ng-repeat="answer in question.responses" ng-class="{ correct: answer.correct }">
             <td>{{ answer.text }}</td>
-            <td>{{ assessmentResults[answer.text].percent() || 0 }}%</td>
-        </tr>-->
-   <!-- </table>-->
-</div>
-        
-<div ng-hide="assessmentResults">
-    Waiting for Results...
+            <td class="col-md-1 col-xs-1">{{ answer.percent(question.count) || 0 }}%</td>
+        </tr>
+    </table>
 </div>
         
 <div style="margin: 20px 0;" class="form-group btn-group pull-right">
